--- a/CSS/output.css
+++ b/CSS/output.css
@@ -192,12 +192,6 @@
   .relative {
     position: relative;
   }
-  .sticky {
-    position: sticky;
-  }
-  .top-0 {
-    top: calc(var(--spacing) * 0);
-  }
   .top-\[0\.5px\] {
     top: 0.5px;
   }
@@ -278,6 +272,12 @@
   }
   .h-\[90\%\] {
     height: 90%;
+  }
+  .h-\[100\] {
+    height: 100;
+  }
+  .h-\[100vh\] {
+    height: 100vh;
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -477,9 +477,6 @@
   .text-\[13px\] {
     font-size: 13px;
   }
-  .text-\[17px\] {
-    font-size: 17px;
-  }
   .text-\[32px\] {
     font-size: 32px;
   }
@@ -583,11 +580,6 @@
       visibility: hidden;
     }
   }
-  .md\:sticky {
-    @media (width >= 48rem) {
-      position: sticky;
-    }
-  }
   .md\:top-\[190px\] {
     @media (width >= 48rem) {
       top: 190px;
@@ -682,6 +674,11 @@
     @media (width >= 48rem) {
       font-size: var(--text-6xl);
       line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
+  .md\:text-\[17px\] {
+    @media (width >= 48rem) {
+      font-size: 17px;
     }
   }
   .md\:text-\[40px\] {
